--- a/__.md
+++ b/__.md
@@ -7,7 +7,13 @@ g++ -o main main.cpp -lssl -lcrypto -Wno-deprecated-declarations && ./main
 
 [Reddit](https://www.reddit.com/r/cpp_questions/comments/q3hdu4/c_library_for_encryption_and_decryption_with_aes/)
 
-[Cryptopp](https://cryptopp.com/wiki/Advanced_Encryption_Standard)
+[Cryptopp - AES](https://cryptopp.com/wiki/Advanced_Encryption_Standard)
 
-[medium](https://medium.com/@cory.lewis1997/openssl-in-c-ad8860d097ae)
+[Medium - openssl-in-c](https://medium.com/@cory.lewis1997/openssl-in-c-ad8860d097ae)
+
+[Openssl Encryption & Decryption](https://www.baeldung.com/linux/openssl-encrypt-large-file)
+
+[c++ openssl - wiki](https://wiki.openssl.org/index.php/EVP_Symmetric_Encryption_and_Decryption#C.2B.2B_Programs)
+
+[openssl wiki](https://wiki.openssl.org/index.php/Main_Page)
 
