better use of cmd line args, changes to add_new_entry(), TODO(__.md).

--- a/__.md
+++ b/__.md
@@ -17,3 +17,66 @@ g++ -o main main.cpp -lssl -lcrypto -Wno-deprecated-declarations && ./main
 
 [openssl wiki](https://wiki.openssl.org/index.php/Main_Page)
 
+
+## Error check Later (TODO)
+- throws Error
+
+```c++
+if (argc == 1) {
+    std::cerr << "USAGE : " << argv[0] << "  <g - Get Entry> <site_name> " << endl;
+    std::cerr << "USAGE : " << argv[0] << "  <a - Add Entry> <site_name> <email> <password>" << endl;
+    return 1;
+}
+
+const char arg1 = (char)*argv[1]; // <g> or <a>
+if (arg1 == 'g') {
+    std::cerr << "USAGE : " << argv[0] << "  <g - Get Entry> <site_name> " << endl;
+    return 1;
+} else {
+    load_vault();
+    std::string site_name = (std::string )argv[2];
+    get_password(site_name, map);
+    return 0;
+}
+if (arg1 == 'a' && argc != 5) {
+    std::cerr << "USAGE : " << argv[0] << "  <a - Add Entry> <site_name> <email> <password>" << endl;
+    return 1;
+} else if (argc == 5){
+    std::string site_name = (std::string )argv[2];
+    std::string email = (std::string )argv[3];
+    std::string password = (std::string )argv[4];
+    add_new_entry(site_name, email, password);
+    return 0;
+} else {
+    std::cerr << "USAGE : " << argv[0] << "  <a - Add Entry> <site_name> <email> <password>" << endl;
+}
+```
+
+- Works fine
+
+```c++
+if (arg1 == 'g') {
+    if (argc != 3) {
+        std::cerr << "USAGE : " << argv[0] << "  <g - Get Entry> <site_name> " << endl;
+        return 1;
+    } else {
+        load_vault();
+        std::string site_name = (std::string )argv[2];
+        get_password(site_name, map);
+        return 0;
+    }
+}
+if (arg1 == 'a') {
+    if (argc != 5) {
+        std::cerr << "USAGE : " << argv[0] << "  <a - Add Entry> <site_name> <email> <password>" << endl;
+        return 1;
+    } else {
+        std::string site_name = (std::string )argv[2];
+        std::string email = (std::string )argv[3];
+        std::string password = (std::string )argv[4];
+        add_new_entry(site_name, email, password);
+        return 0;
+    }
+}
+```
+
